--- a/SQL_Basics1.ipynb
+++ b/SQL_Basics1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To establish connection between mysql and python IDE install package"
+    "### To establish connection between mysql and python IDE, Python has a native library mysql-connector "
    ]
   },
   {
@@ -27,6 +27,17 @@
    ],
    "source": [
     "!pip install mysql-connector-python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cursor Object\n",
+    "- The cursor object is used to make the connection for executing SQL queries.\n",
+    "- It acts as middleware. It is created after giving connection to MySQL database. \n",
+    "- The cursor is a control structure used to traverse and fetch the records of the database. \n",
+    "- All the commands will be executed using cursor object only."
    ]
   },
   {
